--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,3 +1,9 @@
+@import url("https://fonts.googleapis.com/css2?family=El+Messiri:wght@400;500;600;700&display=swap");
+
 body {
 	padding: 0 !important;
+	&,
+	.v-application {
+		font-family: "El Messiri", sans-serif !important;
+	}
 }
