Added loading component

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,7 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=El+Messiri:wght@400;500;600;700&display=swap");
 
+html {
+	overflow: visible;
+}
+
 body {
 	padding: 0 !important;
+	overflow-y: hidden;
+	overflow-x: hidden;
 	&,
 	.v-application {
 		font-family: "El Messiri", sans-serif !important;
